WRM-39: fix justified text spacing with auto hyphens and update rouse program notes

--- a/src/Components/Shared/AcknowledgementsCard/AcknowledgementsCard.module.scss
+++ b/src/Components/Shared/AcknowledgementsCard/AcknowledgementsCard.module.scss
@@ -19,4 +19,5 @@
   font-size: 1rem;
   line-height: 1.6;
   text-align: justify;
+  hyphens: auto;
 }
