--- a/src/Components/Shared/DirectorCard/DirectorCard.module.scss
+++ b/src/Components/Shared/DirectorCard/DirectorCard.module.scss
@@ -46,6 +46,7 @@
     font-size: 1rem;
     line-height: 1.5;
     text-align: justify;
+    hyphens: auto;
     margin-top: 1rem;
     color: $wiley-gray-light;
     white-space: pre-line;
