--- a/src/Components/Wiley/WileyConcertAccordion/WileyAccordionItem.module.scss
+++ b/src/Components/Wiley/WileyConcertAccordion/WileyAccordionItem.module.scss
@@ -46,6 +46,7 @@
 .details.details.details {
   color: $wiley-gray-light;
   text-align: justify;
+  hyphens: auto;
   white-space: pre-line;
 }
 
